--- a/old website/Botany.html
+++ b/old website/Botany.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <link rel="icon" href="img/79273283_2444145052360747_3415897806743797760_n.png">
-    <title>Botanika</title>
+    <title>Botany</title>
         <link rel="stylesheet" href="style.css">
-   
+
 
     </head>
 <body>
