--- a/old website/Medicine.html
+++ b/old website/Medicine.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="img/79273283_2444145052360747_3415897806743797760_n.png">
     <link rel="stylesheet" href="style.css">
+    <title>Medicine</title>
 </head>
 <body>
   <center>
